--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -59,7 +59,7 @@ you must colocate the `s3-unversioned-blobstore-backup-restorer` job from the [b
     Refer to the contents of the `enable-backup-restore-s3-unversioned.yml` ops file as an example and review the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#s3-compatible-unversioned-blobstores) documentation in GitHub for further information.
 
 <p class="note warning">
-  <strong>WARNING</strong>: To minimize storage costs, we recommend creating a lifecycle policy for your backup buckets that permanently expires your older backups. For more information, see <a href="https://docs.aws.amazon.com/AmazonS3/latest/user-guide/create-lifecycle.html">How Do I Create a Lifecycle Policy for an S3 Bucket?</a> in the Amazon S3 documentation.
+  <strong>WARNING</strong>: To minimize storage costs, we recommend creating a lifecycle policy for your backup buckets that permanently expires your older backups. For more information, see <a href="https://docs.aws.amazon.com/AmazonS3/latest/user-guide/create-lifecycle.html">How Do I Create a Lifecycle Policy for an S3 Bucket?</a> in the Amazon Simple Storage Service documentation.
 </p>
 
 ### <a id="s3-unversioned-supported-restore-scenarios"></a> Supported Restore Scenarios for Your Unversioned S3-Compatible Blobstore
@@ -79,7 +79,7 @@ BBR only supports S3-compatible buckets that are versioned and support AWS Signa
 External blobstores are backed up by storing the current version of each blob, not the actual files. Those versions are set to be the current versions at restore time. 
 
 <p class="note warning">
-  <strong>WARNING</strong>: Storing the current version of each blob makes backing up and restoring faster, however as a result, restores only work if the original bucket still exists. If the original bucket is deleted, all of that bucket's related versions are also deleted. If the original bucket is deleted, you can only restore from a replica.  For more information, see <a href="https://docs-cloudfoundry-staging.cfapps.io/bbr/external-blobstores.html#s3-versioned-restore-from-replicas">Restore from Replicas</a>. 
+  <strong>WARNING</strong>: Storing the current version of each blob makes backing up and restoring faster. However, this means that you can only restore if the original bucket still exists. If the original bucket is deleted, all of that bucket's related versions are also deleted. If the original bucket is deleted, you can only restore from a replica.  For more information, see <a href="https://docs-cloudfoundry-staging.cfapps.io/bbr/external-blobstores.html#s3-versioned-restore-from-replicas">Restore from Replicas</a>. 
 </p>
 
 <p class="note warning">
@@ -108,7 +108,7 @@ you must colocate the `s3-versioned-blobstore-backup-restorer` job from [`backup
 
 ### <a id="enable-s3-versioning"></a> Enable Versioning on Your S3-Compatible Blobstore
 
-BBR only supports the backup and restore of blobstores stored in versioned, Amazon S3 buckets
+BBR only supports the backup and restore of blobstores stored in versioned Amazon S3 buckets
 and in S3-compatible buckets that are versioned and support AWS Signature Version 4.
 
 Three Cloud Foundry buckets are backed up by BBR, so you only need to enable versioning of:
@@ -119,7 +119,7 @@ Three Cloud Foundry buckets are backed up by BBR, so you only need to enable ver
 
 Enabling versioning of the `resource_pool` bucket is not required.
 
-To enable versioning of Amazon S3 buckets, see [How Do I Enable or Suspend Versioning for an S3 Bucket?](https://docs.aws.amazon.com/AmazonS3/latest/user-guide/enable-versioning.html) in the Amazon S3 documentation. 
+To enable versioning of Amazon S3 buckets, see [How Do I Enable or Suspend Versioning for an S3 Bucket?](https://docs.aws.amazon.com/AmazonS3/latest/user-guide/enable-versioning.html) in the Amazon Simple Storage Service documentation. 
 
 If you prefer to use the AWS CLI, use the [`put-bucket-versioning` command](https://docs.aws.amazon.com/cli/latest/reference/s3api/put-bucket-versioning.html).
 
@@ -165,15 +165,13 @@ Determine which of the following scenarios applies to your deployment before res
 + [In-Place Restore](#s3-versioned-in-place-restore)
 
 <p class="note">
-  When restoring to a bucket, BBR only modifies blobs that are recorded in the backup artifact. Other blobs are not be affected.
+  When restoring to a bucket, BBR only modifies blobs that are recorded in the backup artifact. Other blobs are not affected.
 </p>
 
 #### <a id="s3-versioned-in-place-restore"></a> In-Place Restore
 When backing up an
 external blobstore, the backup consists of a snapshot of the objects' IDs and versions.
-If your destination Cloud Foundry for a restore uses the original buckets of the backed-up Cloud Foundry,
-that is, you are doing an in-place restore,
-then, during a restore, those versions are retrieved and set to be the current versions in the buckets.
+If you are doing an in-place restore and your destination Cloud Foundry for that restore uses the original buckets of the backed-up Cloud Foundry, those versions are retrieved and set to be the current versions in the buckets.
 
 #### <a id="s3-versioned-restore-to-new-buckets"></a> Restore to New Buckets
 
