--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -125,13 +125,11 @@ If you prefer to use the [AWS CLI](https://aws.amazon.com/cli/), use the [`put-b
 
 2. If your blobstore buckets are not empty, run the following command on each one of them, using the AWS CLI:
 
-    <code>aws s3 cp s3://BUCKET-NAME/ s3://BUCKET-NAME/ --recursive --metadata bump=true</code><br>
-    </br>
-    Where:
-    <ul>
-    <li> <code>BUCKET-NAME</code> is the name of your bucket.
-    </ul>
-
+    ```
+    aws s3 cp s3://BUCKET-NAME/ s3://BUCKET-NAME/ --recursive --metadata bump=true
+    ```
+    Where <code>BUCKET-NAME</code> is the name of your bucket.
+    <br><br>
     For example:
     <pre class="terminal">
     $ aws s3 cp s3://my-bucket/ s3://my-bucket/ --recursive --metadata bump=true
@@ -204,16 +202,12 @@ To modify the backup artifacts, do the following:
 
 2. Run the following command to extract the blobstore backup archive:
 
-    <code>tar xvf BLOBSTORE-ARTIFACT.tar</code>
-    </br>
-    </br>
-    Where:
-    <ul>
-    <li><code>BLOBSTORE-ARTIFACT</code> is the name of your blobstore artifact. 
-    </ul>
-
+    ```
+    tar xvf BLOBSTORE-ARTIFACT.tar
+    ```
+    Where <code>BLOBSTORE-ARTIFACT</code> is the name of your blobstore artifact. 
+    <br><br>
     For example:
-
     <pre class="terminal">$ tar xvf backup-restore-0-s3-versioned-blobstore-backup-restorer.tar</pre>
 
 
@@ -221,19 +215,19 @@ To modify the backup artifacts, do the following:
 
 4. Run the following command to recalculate the shasum of `blobstore.json`:
 
-    <code>shasum -a 256 blobstore.json</code>
+    ```
+    shasum -a 256 blobstore.json
+    ```
 
 5. Update the metadata file entry for that `blobstore.json` with the new checksum.
 
 6. Run the following command to recreate the archive:
-    </br>
-    <code>tar cvf BLOBSTORE-ARTIFACT.tar ./blobstore.json</code>
-    </br>
-    </br>
-    Where:
-    <ul>
-    <li> <code>BLOBSTORE-ARTIFACT</code> is the name of your blobstore artifact. 
-    </ul>
+    
+    ```
+    tar cvf BLOBSTORE-ARTIFACT.tar ./blobstore.json
+    ```
+    Where <code>BLOBSTORE-ARTIFACT</code> is the name of your blobstore artifact. 
+    <br><br>
     For example:
 
     <pre class="terminal">$ tar cvf backup-restore-0-s3-versioned-blobstore-backup-restorer.tar ./blobstore.json</pre>
