--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -21,7 +21,7 @@ owner: BBR
 
 This topic explains how to back up and restore external blobstores with BOSH Backup and Restore (BBR).
 
-BBR supports Amazon S3 buckets, S3-compatible storage solutions, and Azure storage containers.
+BBR supports Amazon S3 buckets, S3-compatible storage solutions, Azure storage containers, and Google Cloud Storage buckets.
 
 The necessary configuration and supported restore scenarios differ depending on the type of blobstore you use. For details, see the sections below.
 
@@ -297,8 +297,51 @@ You can restore blobs to a container in a different Azure storage account from t
 In this scenario, BBR copies the blobs from the backed-up containers in the source Azure storage account to the new containers in the storage account used for restore.
 You must use the `enable-restore-azure-clone.yml` ops file in your deployment.
 
-<p class="note"><strong>Note</strong>: Apply <code>enable-backup-restore.yml</code> and <code>use-azure-storage-blobstore.yml</code>
-before <code>enable-restore-azure-clone.yml</code>.
-For more information, see <a href="cf-backup.html#order">Apply Ops Files in the Correct Order</a>.</p>
+<p class="note">
+  <strong>Note</strong>: Apply <code>enable-backup-restore.yml</code> and <code>use-azure-storage-blobstore.yml</code>
+  before <code>enable-restore-azure-clone.yml</code>.
+  For more information, see <a href="cf-backup.html#order">Apply Ops Files in the Correct Order</a>.
+</p>
 
 After restoring, replace the `enable-restore-azure-clone.yml` ops file in your deployment with the `enable-backup-restore-azure.yml` ops file and redeploy.
+
+## <a id="gcs"></a> Google Cloud Storage Blobstores
+
+BBR backs up GCS blobstores by copying blobs from live buckets to specified backup buckets.
+BBR uses the native copy functionality of your blobstore to transfer blobs between the live and backup buckets, without transferring the blobs to your BBR instance.
+
+### <a id="enable-backup-and-restore-gcs"></a> Enable Backup and Restore of your GCS Blobstore
+
+To back up a Cloud Foundry deployment that uses an GCS external blobstore,
+you must colocate the `gcs-blobstore-backup-restorer` job from the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/tree/master) as part of your deployment.
+
+1. Create backup buckets for droplets, packages, and buildpacks. We recommend that either the backup buckets or copies of them be in a different region than the live buckets.
+
+1. Include the `enable-backup-restore-gcs.yml` ops file in your deployment. The `enable-backup-restore-gcs.yml` file can be found in the [cf-deployment](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-gcs.yml) GitHub repository.
+
+
+    Refer to [vars-enable-backup-restore-gcs.yml](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/example-vars-files/vars-enable-backup-restore-gcs.yml) for information on how to configure the variables for your backup bucket locations.
+
+
+      <p class="note"><strong>Note</strong>: Apply <code>enable-backup-restore.yml</code> and <code>use-gcs-blobstore-service-account.yml</code>
+         before <code>enable-backup-restore-gcs.yml</code>.
+         See <a href="cf-backup.html#order">Apply Ops Files in the Correct Order</a>.</p>
+
+    If you do not use [cf-deployment](https://github.com/cloudfoundry/cf-deployment) and ops files, you can still back up and restore external blobstores with BBR.
+    Refer to the contents of the `enable-backup-restore-gcs.yml` ops file as an example and review the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#google-cloud-storage-blobstores) documentation in GitHub for further information.
+
+<p class="note warning">
+  <strong>WARNING</strong>: To minimize storage costs, we recommend creating a lifecycle policy for your backup buckets that permanently expires your older backups. For more information, see <a href="https://cloud.google.com/storage/docs/lifecycle">Object Lifecycle Management</a> in the Google Cloud Storage documentation.
+</p>
+
+
+### <a id="gcs-supported-restore-scenarios"></a> Supported Restore Scenarios for your GCS Blobstore
+
+The restore process copies blobs from a directory in the backup bucket to the live buckets in use by the CF deployment you are restoring into.
+
+If your original backup buckets are lost but you are restoring from copies of those original backup buckets, ensure that the variables listed in [vars-enable-backup-restore-gcs.yml](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/example-vars-files/vars-enable-backup-restore-gcs.yml) reference those copies.
+
+<p class="note warning">
+  <strong>WARNING</strong>: Restoring to a GCS bucket overwrites blobs with the backed up copies of those blobs.
+  BBR only modifies the blobs that were copied to the backup bucket. Other blobs are not changed during this process.
+</p>
