--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,21 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.3'></a> v1.3.1
+
+**Release Date**: November 30, 2018
+
+#### Features
+
+* BBR multi-deployment backup log file names now contain timestamps
+  - BBR generates one log file per deployment
+  - Users will be able to retain logs even after running BBR multiple times
+  - BBR writes the log files in the directory passed in the `--backup-artifact` flag
+
+#### Improvements
+
+* Bumped Golang dependency to the latest patch
+
 ### <a id='1.3'></a> v1.3.0
 
 **Release Date**: November 13, 2018
