Edit PR #49 for style [#162341512]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,10 +11,10 @@ owner: Release Engineering
 
 #### Features
 
-* BBR multi-deployment backup log file names now contain timestamps
-  - BBR generates one log file per deployment
-  - Users will be able to retain logs even after running BBR multiple times
-  - BBR writes the log files in the directory passed in the `--backup-artifact` flag
+* BBR multi-deployment backup log file names now contain timestamps.
+  - BBR generates one log file per deployment.
+  - Users can retain logs even after running BBR multiple times.
+  - BBR writes the log files in the directory passed in the `--backup-artifact` flag.
 
 #### Improvements
 
