--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,20 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.3'></a> v1.3.2
+
+**Release Date**: January 2, 2019
+
+#### Improvements
+
+* Log files created when using BBR to do a multi-deployment backup can now be read while BBR is running:
+
+	```
+	bbr deployment --all-deployments backup & # run this in the background
+        tail *.log # monitor progress by reading the log files while bbr is running
+	```
+  
+
 ### <a id='1.3'></a> v1.3.1
 
 **Release Date**: November 30, 2018
