--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -14,10 +14,12 @@ owner: Release Engineering
 * Log files created when using BBR to do a multi-deployment backup can now be read while BBR is running:
 
 	```
-	bbr deployment --all-deployments backup & # run this in the background
-        tail *.log # monitor progress by reading the log files while bbr is running
+	# run BBR in the background
+	bbr deployment --all-deployments backup &
+
+	# monitor BBR's progress by reading the log files while BBR is running
+	tail *.log
 	```
-  
 
 ### <a id='1.3'></a> v1.3.1
 
