--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,15 +11,17 @@ owner: Release Engineering
 
 #### Improvements
 
-* Log files created when using BBR to do a multi-deployment backup can now be read while BBR is running:
+* Log files created when using BBR to do a multi-deployment backup can now be read while BBR is running. Perform the following steps: 
+	1. Run the following command to run BBR in the background:
 
-	```
-	# run BBR in the background
-	bbr deployment --all-deployments backup &
-
-	# monitor BBR's progress by reading the log files while BBR is running
-	tail *.log
-	```
+		```
+		bbr deployment --all-deployments backup &
+		```
+	1. Run the following command to monitor BBR's progress by reading the log files while BBR is running:
+	
+		```
+		tail *.log
+		```
 
 ### <a id='1.3'></a> v1.3.1
 
