--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -34,6 +34,8 @@ To enable backup and restore for your `cf-deployment`, deploy it with the
 [enable-backup-restore.yml](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore.yml) ops file. This
 enables BBR backup and restore for default CF components, including the internal blobstore.
 
+When using the default configuration, all applications return to a running state after a restore.
+
 To enable BBR backup and restore for different configurations you must also use the appropriate backup and restore ops files as shown in this table:
 
 <table class="nice">
@@ -132,50 +134,61 @@ The backup and restore SDK supports the following database versions:
 | Postgres | 9.6.x   |
 
 
-### <a id='supported-blobstore-backup-configurations'></a>Selective Backups Configurations for Blobstores
-When configuring your blobstore you can choose to use an external blobstore instead of the default internal blobstore. See <a href="external-blobstores.html">Backup and Restore for External Blobstores
-</a> for our list of supported external blobstores.
+### <a id='supported-blobstore-backup-configurations'></a>Selective Backup Configurations for Blobstores
 
-When backing up your blobstores by default it backups droplets, buildpacks, and packages. When an external blobstore is configured, you can choose what content you want to omit from your backup using the following ops files:
+When configuring your blobstore, you can choose to use an external blobstore instead
+of the default internal blobstore. For more information about supported external
+blobstores, see [Backup and Restore for External Blobstores](external-blobstores.html).
 
-| Selective Backup Ops File                                                                                                                                                                                            | Backup only includes |
+When BBR backs up your blobstores, it backs up droplets, buildpacks, and packages
+by default. If you configure an external blobstore, you can choose to omit content
+from your backup using the following ops files:
+
+| Selective Backup Ops File                                                                                                                                                                                            | Content Included in Backup |
 |:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:---------------------|
 | <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/skip-backup-restore-droplets.yml">`skip-backup-restore-droplets.yml`</a>                           | Buildpacks, Packages |
 | <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/skip-backup-restore-droplets-and-packages.yml">`skip-backup-restore-droplets-and-packages.yml`</a> | Buildpacks           |
 
-<p class="note warning">
-When utilising selective backup ops files, you should take into a account the <a href="#selective-backup-restore-steps">extra steps needed</a> to get your applications into a running state after a restore, as they will increase your overall recovery time compared to the default configuration.
-<p>
+<p class="note warning"><strong>WARNING</strong>: Selective backups increase
+your overall recovery time. When you use selective backup ops files, applications
+require extra steps to return to a running state after a restore. For more
+information, see the <a href="#selective-backup-restore-steps">Restoring Applications when Using Selective Backups</a> section below.<p>
 
-#### <a id='selective-backup-restore-steps'></a>Restoring Applications when using Selective Backups
-When using the default configuration, all applications will return to a running state after a restore.
+#### <a id='selective-backup-restore-steps'></a>Restoring Applications when Using Selective Backups
 
-When using the `skip-backup-restore-droplets.yml` ops file, you must do the following to get your applications running after a restore:
+When using the `skip-backup-restore-droplets.yml` ops file, do the following to get your applications running after a restore:
 
-1. `cf restage` your user-pushed applications.
-1. For any applications pushed via a BOSH errand you can either manually `cf restage` them or re-run their errand.
+1. For each user-pushed application, run `cf restage`.
+1. For each application pushed using a BOSH errand, you can either run `cf restage` or re-run the BOSH errand.
 
-When using the `skip-backup-restore-droplets-and-packages.yml` ops file, you must do the following to get your applications running after a restore:
+When using the `skip-backup-restore-droplets-and-packages.yml` ops file, do the following to get your applications running after a restore:
 
-1. `cf push` your user-pushed applications.
-1. For any applications pushed via a BOSH errand you will have to re-run their errand.
+1. For each user-pushed application, run `cf restage`.
+1. For each application pushed using a BOSH errand, re-run the BOSH errand.
 
 ### <a id="order"></a> Apply Ops Files in the Correct Order
-When enabling backup and restore for a component of `cf-deployment` you must ensure that you have the ops file for enabling backup and restore applied after you have applied the feature. For example if you configured your `cf-deployment` to use an S3 blobstore you would need to make sure that you apply the ops files in the following order:
+
+When enabling BBR for a `cf-deployment` component, you must apply the component
+ops file first, and then apply the ops file that enables BBR. See the following
+sections for examples of applying ops files in the correct order.
+
+**S3 Blobstore**
+
+To configure `cf-deployment` to use an S3 blobstore with BBR enabled, apply the ops files in the following order:
 
 1. `use-s3-blobstore.yml`
 1. `enable-backup-restore-s3-unversioned.yml`
 
-Another example would be configuring your `cf-deployment` to use an external database and enabling backup restore for it.  In this case the relative is order is the following:
+**External Database**
+
+To configure `cf-deployment` to use an external database with BBR enabled, apply the ops files in the following order:
 
 1. `use-external-db.yml`
 1. `enable-backup-restore.yml`
 
-<p class="note">
-This is the <em>relative</em> order. You can apply other ops files in between.<br>
-For example, you can apply an ops file between <code>use-s3-blobstore.yml</code> and <code>enable-backup-restore-s3-unversioned.yml</code>,
-but do not apply <code>enable-backup-restore-s3-unversioned.yml</code> <em>before</em> <code>use-s3-blobstore.yml</code>.
-<p>
+<p class="note"><strong>Note</strong>: You can apply other ops files in between
+the component ops file and the BBR ops file. For example, you can apply an ops file between <code>use-s3-blobstore.yml</code> and <code>enable-backup-restore-s3-unversioned.yml</code>,
+but do not apply <code>enable-backup-restore-s3-unversioned.yml</code> before <code>use-s3-blobstore.yml</code>.<p>
 
 ## <a id='process'></a> Next Steps
 
